drawer and other work will be done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   # country_picker: ^2.0.20
   google_sign_in: 
   pinput: ^3.0.1
+  syncfusion_flutter_calendar: ^24.2.3
 
 dev_dependencies:
   flutter_test:
