--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   google_sign_in: 
   pinput: ^3.0.1
   syncfusion_flutter_calendar: ^24.2.3
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
